# openscientist

./: .coveragerc  .dockerignore  .env.example  .env.example.bedrock  .gitignore  .pre-commit-config.yaml  CHAT_CLAUDE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.agent  Dockerfile.base  Dockerfile.executor  ISSUES.md  JOB_CLAUDE.md  Makefile  PHENIX_QUICKSTART.md  README.md  TODO_DOCKER_SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  final_research_summary.txt  justfile  mcp_config.json.example  metabolights.ddb  pyproject.toml  requirements-executor.txt  test_arg_max_fix.py  test_foundry.py
.github/workflows/: ci.yml  main.yaml
cargo-seed/: Cargo.toml
cargo-seed/src/: main.rs
docker/: agent-entrypoint.py  entrypoint.sh
docker/postgres/: init.sql
docs/: DEPLOYMENT.md  DESIGN.md  DISCOVERY_AGENT_REFERENCE.md  EXPERT_SUBAGENTS.md  FOUNDRY_SETUP.md  PHENIX_SETUP.md  RUN_LOCAL.md  SECURITY_REVIEW.md  VERTEX_BUDGET_SAFETY.md  VERTEX_SETUP.md
docs/plans/: 2024-12-04-optional-file-upload-plan.md  2024-12-10-scientist-in-the-loop-design.md  2025-11-13-open-scientist-autonomous-loop-design.md  2025-11-13-openscientist-autonomous-loop-design.md  2025-11-13-shandy-autonomous-loop-design.md  2025-11-20-phenix-integration-design.md  2025-11-22-vertex-provider-design.md  2025-11-23-gassh-vertex-deployment.md  2025-12-13-ui-refactor-provenance.md  2025-12-14-trajectory-planning.md  2025-12-16-pluggable-skills-design.md  2026-02-05-bundle-download-design.md  2026-02-05-github-actions-design.md
flow_screenshots/: annotations.json  mobile_annotations.json
scripts/: check-no-env-access.sh  migrate_jobs.py
skills/domain/data-science/: SKILL.md
skills/domain/genomics/: SKILL.md
skills/domain/metabolomics/: SKILL.md
skills/domain/phenix-tools-reference/: SKILL.md
skills/domain/structural_biology/: alphafold-confidence.md  comparing-structures.md  interpreting-discrepancies.md  phenix-tools-reference.md  validation-metrics.md
skills/workflow/hypothesis-generation/: SKILL.md
skills/workflow/prioritization/: SKILL.md
skills/workflow/result-interpretation/: SKILL.md
skills/workflow/stopping-criteria/: SKILL.md
src/open_scientist/: __init__.py  artifact_packager.py  bootstrap.py  code_executor.py  container_manager.py  document_reader.py  exceptions.py  file_loader.py  job_chat.py  job_manager.py  knowledge_state.py  literature.py  ntfy.py  pdf_generator.py  phenix_setup.py  prompts.py  security.py  settings.py  share_service.py  skill_ingestion.py  version.py  web_app.py
src/open_scientist/admin/: orphan_jobs.py
src/open_scientist/agent/: __init__.py  factory.py  protocol.py  sdk_executor.py
src/open_scientist/api/: __init__.py  auth.py  router.py  utils.py
src/open_scientist/assets/: manifest.json
src/open_scientist/auth/: __init__.py  fastapi_routes.py  middleware.py  oauth.py  routes.py
src/open_scientist/database/: __init__.py  base.py  crypto.py  engine.py  rls.py  session.py  types.py
src/open_scientist/job/: __init__.py  types.py
src/open_scientist/job_container/: __init__.py  runner.py
src/open_scientist/orchestrator/: __init__.py  discovery.py  iteration.py  setup.py
src/open_scientist/providers/: __init__.py  anthropic.py  base.py  bedrock.py  cborg.py  codex.py  foundry.py  vertex.py
src/open_scientist/tools/: __init__.py  code_exec.py  document.py  job_meta.py  knowledge.py  phenix.py  pubmed.py  registry.py
src/open_scientist/webapp_components/: __init__.py  error_handler.py  share_routes.py  ui_components.py
src/open_scientist_executor/: __init__.py  __main__.py
src/openscientist/: __init__.py  artifact_packager.py  async_tasks.py  bootstrap.py  code_executor.py  container_manager.py  file_loader.py  job_chat.py  job_manager.py  job_review.py  job_templates.py  knowledge_state.py  ntfy.py  pdf_generator.py  phenix_setup.py  prompts.py  security.py  settings.py  share_service.py  skill_ingestion.py  version.py  web_app.py
src/openscientist/api/: auth.py  (+2 more)
src/openscientist_executor/: __init__.py  __main__.py
src/shandy/: __init__.py  agent_loop.py  artifact_packager.py  async_tasks.py  bootstrap.py  bundle_generator.py  code_executor.py  container_manager.py  cost_tracker.py  document_reader.py  exceptions.py  file_loader.py  header_proxy.py  job_chat.py  job_manager.py  knowledge_graph.py  knowledge_state.py  literature.py  mcp_client.py  mcp_export.py  ntfy.py  orchestrator.py  pdf_generator.py  phenix_setup.py  prompts.py  security.py  settings.py  share_service.py  skill_export.py  skill_ingestion.py  skill_relevance.py  skill_scheduler.py  version.py  web_app.py
src/shandy_executor/: __main__.py
test_data/tp53/: 3ts8.cif  README.md  alphafold_P04637_pae.json  manual_test_experiment.md
tests/: conftest.py  helpers.py  test_admin_page.py  test_api.py  test_api_auth.py  test_api_endpoints.py  test_artifact_packager.py  test_auth_middleware.py  test_auth_oauth.py  test_bootstrap.py  test_chat_template_container.py  test_code_executor.py  test_config_json_usage.py  test_container_dashboard.py  test_container_manager.py  test_cost_tracker.py  test_crypto.py  test_database.py  test_db_session_fixture.py  test_discovery_experts.py  test_document_reader.py  test_expert_loader.py  test_expert_migration.py  test_expert_model.py  test_expert_seed.py  test_expert_seed_helper.py  test_experts_end_to_end.py  test_experts_rls_read.py  test_file_loader.py  test_hypothesis_feature.py  test_job_chat.py  test_job_chat_experts.py  test_job_container.py  test_job_manager.py  test_job_review.py  test_job_sharing.py  test_job_templates.py  test_knowledge_state.py  test_literature.py  test_migration_script.py  (+34 more)
tests/test_utils/: test_api_utils.py
tests/webapp/: __init__.py  conftest.py  test_auth.py  test_docs_page.py  test_error_handler.py  test_events.py  test_new_job_page.py  test_session.py  test_transcript_parser.py  test_ui_components.py
tests/zz_e2e/: __init__.py  conftest.py
tools/: README.md  tile_screenshots.py
vertex-ai-budget-enforcer/: Dockerfile  main.py  requirements.txt
(+291 files in other folders)
