[project]
name = "shandy"
version = "0.1.0"
description = "SHANDY - Scientific Hypothesis Agent for Novel Discovery"
authors = [
    {name = "Justin Reese", email = "justinreese@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "nicegui>=1.4.0",

    # Core scientific computing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # File format support
    "python-magic>=0.4.27",  # MIME type detection
    "openpyxl>=3.1.0",       # Excel .xlsx support
    "pyarrow>=14.0.0",       # Parquet support
    "pymupdf>=1.24.0",       # PDF text extraction
    "python-docx>=1.1.0",    # Word document text extraction

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Statistics
    "statsmodels>=0.14.0",

    # Domain-specific
    "networkx>=3.0",

    # Single-cell genomics
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "h5py>=3.10.0",

    # API clients
    "anthropic>=0.34.0",
    "requests>=2.31.0",

    # MCP server
    "mcp[cli]>=1.0.0",

    # Environment & config
    "python-dotenv>=1.0.0",

    # Authentication
    "bcrypt>=4.0.0",

    # Type hints
    "typing-extensions>=4.8.0",

    # Cloud providers (for Vertex AI cost tracking)
    "google-cloud-bigquery>=3.11.0",

    # PDF generation (lightweight, pure Python)
    "fpdf2>=2.7.0",
    "markdown>=3.5.0",

    # Berkeley Lab Data Lakehouse
    "linkml-store[dremio]>=0.2.0",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "nicegui.*",
    "bcrypt.*",
    "dotenv.*",
    "fitz.*",
    "docx.*",
    "scanpy.*",
    "anndata.*",
    "seaborn.*",
    "matplotlib.*",
    "numpy.*",
    "magic.*",
    "fpdf.*",
    "google.cloud.*",
    "google.oauth2.*",
    "requests.*",
    "pandas.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.14.5",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-openpyxl>=3.1.0",
    "pandas-stubs>=2.0.0",
]
